test/bad/generics/type06.px

func f<T>(T x) def
    n = 0.0
    n = x

f('x')
